--- a/TransportStoreManagerApi/appsettings.json
+++ b/TransportStoreManagerApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5476;Database=fb;User Id=postgres;Password=password"
+    "DefaultConnection": "Server=localhost;Database=TransportStore;User Id=sa;Password=<YourStrong@Passw0rd>;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
