--- a/TransportStoreManagerApi/TransportStoreManagerApi.csproj
+++ b/TransportStoreManagerApi/TransportStoreManagerApi.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="13.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.4.24267.1">
           <PrivateAssets>all</PrivateAssets>
